--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,5 @@
 title: Lab Escape
 email: lab.escape.fit@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "/"
 url: "https://labescape.github.io"
 github_username: LabEscape
@@ -14,6 +10,10 @@ markdown: kramdown
 
 plugins:
   - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 whitelist:
   - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-seo-tag
